<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:icon="@drawable/ic_baseline_settings_24"
        app:fragment="eu.darken.capod.main.ui.settings.general.GeneralSettingsFragment"
        app:summary="@string/settings_general_description"
        app:title="@string/settings_general_label" />

    <Preference
        android:icon="@drawable/ic_baseline_widgets_24"
        app:fragment="eu.darken.capod.reaction.settings.ui.ReactionSettingsFragment"
        app:summary="@string/settings_reaction_description"
        app:title="@string/settings_reaction_label" />

    <Preference
        android:icon="@drawable/ic_baseline_support_agent_24"
        app:fragment="eu.darken.capod.main.ui.settings.support.SupportFragment"
        app:summary="@string/settings_support_description"
        app:title="@string/settings_support_label" />

    <PreferenceCategory android:title="@string/settings_category_other_label">

        <Preference
            android:icon="@drawable/ic_baseline_book_24"
            app:summary="@string/settings_privacy_policy_desc"
            app:title="@string/settings_privacy_policy_label">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://raw.githubusercontent.com/d4rken/capod-public/main/PRIVACY_POLICY.md" />
        </Preference>

        <Preference
            android:icon="@drawable/ic_changelog_onsurface"
            android:key="core.changelog"
            android:title="@string/changelog_label"
            app:summary="v?.?.?">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/d4rken/capod-public/releases/latest" />
        </Preference>

        <Preference
            android:icon="@drawable/ic_baseline_translate_24"
            android:key="core.translation"
            android:title="@string/help_translate_label"
            app:summary="@string/help_translate_description">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://crowdin.com/project/capod" />
        </Preference>

        <Preference
            android:icon="@drawable/ic_heart"
            app:fragment="eu.darken.capod.main.ui.settings.acks.AcknowledgementsFragment"
            app:summary="@string/general_thank_you_label"
            app:title="@string/settings_acknowledgements_label" />

    </PreferenceCategory>
</PreferenceScreen>