<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:icon="@drawable/ic_github_onsurface"
        android:summary="@string/issue_tracker_description"
        android:title="@string/issue_tracker_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/d4rken/capod-public/issues" />
    </Preference>
    <Preference
        android:icon="@drawable/ic_discord_onsurface"
        android:summary="@string/discord_description"
        android:title="@string/discord_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://discord.gg/rrxxng35jq" />
    </Preference>
    <Preference
        android:icon="@drawable/ic_email_onsurface"
        android:key="support.email.darken"
        android:summary="@string/settings_support_email_developer_description"
        android:title="@string/settings_support_email_developer_label" />

    <PreferenceCategory app:title="@string/settings_category_other_label">
        <Preference
            android:icon="@drawable/ic_id_onsurface"
            android:key="support.installid"
            android:summary="@string/settings_support_installid_desc"
            android:title="@string/settings_support_installid_label" />
    </PreferenceCategory>
</PreferenceScreen>