<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/general_thank_you_label"
        app:iconSpaceReserved="false">
        <eu.darken.capod.common.preferences.IntentPreference
            android:key="thanks.translators"
            android:summary="@string/translators_thanks_description"
            android:title="@string/translators_thanks_title"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://crowdin.com/project/capod/activity-stream" />
        </eu.darken.capod.common.preferences.IntentPreference>
        <eu.darken.capod.common.preferences.IntentPreference
            android:key="thanks.maxpatchs"
            android:summary="Thanks for the lovely icons."
            android:title="Max Patchs"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://twitter.com/maxpatchs" />
        </eu.darken.capod.common.preferences.IntentPreference>
        <eu.darken.capod.common.preferences.IntentPreference
            android:key="thanks.openpods"
            android:summary="Pioneering AirPod support on Android"
            android:title="OpenPods project"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/adolfintel/OpenPods" />
        </eu.darken.capod.common.preferences.IntentPreference>
        <eu.darken.capod.common.preferences.IntentPreference
            android:key="thanks.furiousmac"
            android:summary="Research on the continuity protocol"
            android:title="FuriousMAC"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/furiousMAC/continuity" />
        </eu.darken.capod.common.preferences.IntentPreference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_licenses_label"
        app:iconSpaceReserved="false">
        <eu.darken.capod.common.preferences.IntentPreference
            android:key="license.glide"
            android:summary="An image loading and caching library for Android focused on smooth scrolling. (Multiple licenses)"
            android:title="Glide"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/bumptech/glide" />
        </eu.darken.capod.common.preferences.IntentPreference>
        <eu.darken.capod.common.preferences.IntentPreference
            android:key="license.materialdesignicons"
            android:summary="materialdesignicons.com (SIL Open Font License 1.1 / Attribution 4.0 International)"
            android:title="Material Design Icons"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/Templarian/MaterialDesign" />
        </eu.darken.capod.common.preferences.IntentPreference>
        <eu.darken.capod.common.preferences.IntentPreference
            android:key="license.zwiconiconset"
            android:summary="Creative Commons Attribution 4.0 International"
            android:title="Zwicon Icon Set"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://iconduck.com/sets/zwicon-icon-set" />
        </eu.darken.capod.common.preferences.IntentPreference>
        <eu.darken.capod.common.preferences.IntentPreference
            android:key="license.kotlin"
            android:summary="The Kotlin Programming Language. (APACHE 2.0)"
            android:title="Kotlin"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/JetBrains/kotlin" />
        </eu.darken.capod.common.preferences.IntentPreference>
        <eu.darken.capod.common.preferences.IntentPreference
            android:key="license.dagger"
            android:summary="A fast dependency injector for Android and Java. (APACHE 2.0)"
            android:title="Dagger"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/google/dagger" />
        </eu.darken.capod.common.preferences.IntentPreference>
        <eu.darken.capod.common.preferences.IntentPreference
            android:key="license.moshi"
            android:summary="A modern JSON library for Kotlin and Java. (APACHE 2.0)"
            android:title="Moshi"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/square/moshi" />
        </eu.darken.capod.common.preferences.IntentPreference>
        <eu.darken.capod.common.preferences.IntentPreference
            android:key="android.android"
            android:summary="Android Open Source Project (APACHE 2.0)"
            android:title="Android"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://source.android.com/source/licenses.html" />
        </eu.darken.capod.common.preferences.IntentPreference>
        <eu.darken.capod.common.preferences.IntentPreference
            android:key="android.logo"
            android:summary="The Android robot is reproduced or modified from work created and shared by Google and used according to terms described in the Creative Commons 3.0 Attribution License."
            android:title="Android"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://developer.android.com/distribute/tools/promote/brand.html" />
        </eu.darken.capod.common.preferences.IntentPreference>
    </PreferenceCategory>
</PreferenceScreen>